# QTCMake

./: .gitignore  CMakeLists.txt  GuoJia.cpp  GuoJia.h  MainRun.cpp  Player.cpp  Player.h  anime.cpp  distanceCheck.cpp  handFunction.cpp  main.cpp  main.h  mainrun.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  qt.emmx  tips.cpp  value.h
interactive_buttons/: interactivebuttonbase.cpp
resource/: main.qrc
resource/other/: BOM.xls
